[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
open = "5.0.1"
#openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11.24", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] } # for our async runtime
futures = "0.3.30"
indoc = "2.0.4"

